Added Patreon donations button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,12 @@
     <string name="preference_key_contact" translatable="false">preference_contact</string>
     <string name="preference_key_version" translatable="false">preference_version</string>
     <string name="preference_key_privacy_policy" translatable="false">preference_privacy_policy</string>
+    <string name="preference_key_patreon" translatable="false">preference_patreon</string>
 
     <string name="app_name" translatable="false">Blitter</string>
     <string name="preference_summary_developer" translatable="false">Samuel Soutullo Sobral</string>
     <string name="developer_email" translatable="false">samuelsoutullosobral@gmail.com</string>
+    <string name="patreon_url" translatable="false">https://www.patreon.com/samuelsoutullo</string>
 
     <string name="persons_array_separator">,&#160;</string>
     <string name="main_fab_manually">Transcribir manualmente</string>
@@ -112,8 +114,8 @@
     <string name="preference_title_version">Versión</string>
     <string name="preference_title_privacy_policy">Política de privacidad</string>
     <string name="preference_summary_privacy_policy">Revisar la política de privacidad</string>
-
-
+    <string name="preference_title_patreon">Donar al desarrollador</string>
+    <string name="preference_summary_patreon">Donar a través de Patreon</string>
 
     <string name="dialog_delete_all_bills_message">¿Estás seguro de que deseas eliminar todas las cuentas y personas introducidas en la aplicación?</string>
     <string name="toast_delete_all_bills_success">Los datos han sido borrados correctamente</string>
