Added animations and recognising message on OcrCaptureActivity

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -124,6 +124,7 @@
     <string name="activity_ad_mob_message">Este anuncio permite que Blitter sea una aplicación gratuita</string>
     <string name="button_text_wait">Espera</string>
     <string name="activity_ocr_finding_receipt">Buscando ticket…</string>
+    <string name="activity_ocr_recognising_receipt">Reconociendo…\nNo dejes de enfocar al ticket</string>
 
     <plurals name="dialog_product_assignation_sub_header">
         <item quantity="one">Asignar este producto a:</item>
