--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,6 +140,7 @@
     <string name="activity_ad_mob_message">This app helps the developer and makes Blitter a free app</string>
     <string name="button_text_wait">Please, wait</string>
     <string name="activity_ocr_finding_receipt">Finding receipt…</string>
+    <string name="activity_ocr_recognising_receipt">Recognising…\nKeep focusing the receipt</string>
 
     <plurals name="dialog_product_assignation_sub_header">
         <item quantity="one">Assign this product to:</item>
