--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -51,7 +51,7 @@
     <string name="dialog_tip_result_text">Se añadirá un %1$d%% de propina (%2$s) a la cuenta.</string>
     <string name="dialog_edit_tax_hint">Impuestos (%1$s)</string>
 
-    <string name="toast_manual_transcription_fill_fields">Por favor, rellene los campos correctamente</string>
+    <string name="toast_manual_transcription_fill_fields">Por favor, rellena los campos correctamente</string>
     <string name="dialog_delete_product_title">Eliminar producto</string>
     <string name="dialog_delete_product_message">¿Estás seguro de que deseas eliminar el producto %1$s?</string>
     <string name="dialog_generic_delete_button">Eliminar</string>
@@ -107,7 +107,7 @@
     <string name="intent_chooser_title_send_mail">Enviar correo</string>
     <string name="app_bar_search_hint">Buscar…</string>
     <string name="bill_search_not_found">No se ha encontrado ningún resultado para la búsqueda actual</string>
-    <string name="toast_ocr_low_storage">Insuficiente espacio de almacenamiento para realizar el reconocimiento. Por favor, libera un poco de espacio de almacenamiento</string>
+    <string name="toast_ocr_low_storage">Insuficiente espacio de almacenamiento para realizar el reconocimiento. Por favor, libera un poco de espacio</string>
     <string name="product_name_taxes">Impuestos</string>
     <string name="camera_intro_title">Escanear un ticket</string>
     <string name="camera_intro_description">A continuación se abrirá la cámara. Enfoca al ticket durante unos segundos, sin tocar nada hasta que la aplicación reconozca los productos. Intenta que todos los nombres de los productos y sus precios estén dentro de la imagen. También debe ser visible el precio total.</string>
