--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -126,6 +126,8 @@
     <string name="activity_ocr_finding_receipt">Buscando ticket…</string>
     <string name="activity_ocr_recognising_receipt">Recoñecendo…\nNon deixes de enfocar ó ticket</string>
 
+    <string name="app_intro_done_button">FEITO</string>
+
     <plurals name="dialog_product_assignation_sub_header">
         <item quantity="one">Asignar este produto a:</item>
         <item quantity="other">Asignar estes produtos a:</item>
