--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -128,6 +128,12 @@
 
     <string name="app_intro_done_button">HECHO</string>
 
+    <string name="assignation_content_description_delete_person">Eliminar esta persona</string>
+    <string name="dialog_delete_recent_person_title">Eliminar a \"%1$s\"</string>
+    <string name="dialog_delete_recent_person_message_assigned">Esta persona está actualmente asignada a algunos productos. Si la eliminas, se perderán estas asignaciones. ¿Estás seguro de que deseas eliminar a esta persona y sus asignaciones?</string>
+    <string name="dialog_delete_recent_person_message_not_assigned">¿Estás seguro de que desaeas eliminar a esta persona de la lista de recientes?</string>
+    <string name="dialog_delete_recent_person_positive_assigned">Desasignar y eliminar</string>
+
     <plurals name="dialog_product_assignation_sub_header">
         <item quantity="one">Asignar este producto a:</item>
         <item quantity="other">Asignar estos productos a:</item>
