--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -133,6 +133,9 @@
     <string name="dialog_delete_recent_person_message_assigned">Esta persoa está actualmente asignada a algúns produtos. Se a eliminas, perderanse estas asignacións. Estás seguro de que desexas eliminar a esta persoa e ás súas asignacións?</string>
     <string name="dialog_delete_recent_person_message_not_assigned">Estás seguro de que desexas eliminar a esta persoa da lista de recentes?</string>
     <string name="dialog_delete_recent_person_positive_assigned">Desasignar e eliminar</string>
+    <string name="button_remove_ads"><u>Eliminar anuncios e esperas</u></string>
+    <string name="toast_purchase_successful">Compra realizada correctamente</string>
+    <string name="toast_purchase_error">Compra cancelada</string>
 
     <plurals name="dialog_product_assignation_sub_header">
         <item quantity="one">Asignar este produto a:</item>
